--- a/TODO
+++ b/TODO
@@ -1,1 +1,7 @@
+1. Завести руками custom service, сложить реквесты в ranger-requests
+2. Проверить работоспособность политик
+3. Сгенерить по ним скрипт работающий в Makefile
+4. Написать сам proxy
+5. Добавить кеш
+
 - Сделать норм поднятие докера с хелсчеками
