--- a/TODO
+++ b/TODO
@@ -1,7 +1,12 @@
-1. Завести руками custom service, сложить реквесты в ranger-requests
-2. Проверить работоспособность политик
-3. Сгенерить по ним скрипт работающий в Makefile
-4. Написать сам proxy
-5. Добавить кеш
+1. + Завести руками custom service на http://localhost:6080/apidocs/swagger.html, сложить реквесты в ranger-requests
+2. + Проверить работоспособность политик
+3. + Сгенерить по ним скрипт работающий при поднятии
+4. + Написать сам proxy
 
-- Сделать норм поднятие докера с хелсчеками
+3. solr -> quickwit
+4. писать лог в quickwit из proxy
+
+5. !!! авторизация: токен -> proxy -> minio -> proxy (token -> username)
+
+5. +- Добавить кеш
+6. Сделать норм поднятие докера с хелсчеками
